--- a/_config.yml
+++ b/_config.yml
@@ -103,8 +103,8 @@ analytics:
 author:
   name             : "GomCoder"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "I'm study applied software engineering. "
+  location         : ""
   email            :
   links:
     - label: "Email"
