--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 author:
   name             : "GomCoder"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I'm study applied software engineering. "
+  bio              : "I'm studying applied **software engineering**. "
   location         : ""
   email            :
   links:
