상단 메뉴바 수정 아직 안 사용하는 부분들은 Menu00으로 수정함

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,11 +4,11 @@
 main:
   - title: "Home"
     url: https://gomcoder.github.io/
-  - title: "About"
+  - title: "Menu02"
     url: 
-  - title: "Sample Posts"
+  - title: "Menu03"
     url: /year-archive/
-  - title: "Sample Collections"
+  - title: "Menu04"
     url: /collection-archive/
-  - title: "Sitemap"
+  - title: "Menu05"
     url: /sitemap/
